// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditStageView snapshot test should render properly 1`] = `
<div>
  <div
    class="stageCreate"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 32 28"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.327.544h26.057v26.913H5.327V.544zM3.4.544H.617v26.913H3.4V.544zm19.398 10.318c-.943-.872.384-2.307 1.327-1.435l4.17 3.856a.979.979 0 010 1.435l-4.17 3.855c-.943.873-2.27-.562-1.327-1.434L26.193 14l-3.395-3.138zM20.09 7.404c.499-1.186 2.302-.426 1.803.76L16.62 20.597a.978.978 0 01-1.802-.76L20.09 7.404zm-7.505 2.023c.944-.872 2.27.563 1.327 1.435L10.517 14l3.395 3.139c.944.872-.383 2.308-1.327 1.434l-4.17-3.855a.98.98 0 010-1.435l4.17-3.856z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              About Your Stage
            </p>
            <div
              class="InputWithIdentifier--txtNameContainer"
            >
              <div
                class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ID
                  :
                </p>
                <span
                  class="InputWithIdentifier--idInput"
                  contenteditable="true"
                >
                  id1
                </span>
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                  style="vertical-align: middle;"
                >
                  <svg
                    data-icon="edit"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  Stage Name
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value="name1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="collapseDiv"
            >
              <div
                class="Collapse--main"
              >
                <div
                  class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                >
                  <div
                    class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                  >
                    <span
                      class="bp3-icon bp3-icon-small-minus StyledProps--main StyledProps--color StyledProps--color-grey400"
                      icon="small-minus"
                    >
                      <svg
                        data-icon="small-minus"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          small-minus
                        </desc>
                        <path
                          d="M11 7H5c-.55 0-1 .45-1 1s.45 1 1 1h6c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main CollapseHeader--title"
                    >
                      Description
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="Collapse--collapse"
                >
                  <div
                    class="bp3-collapse collapse"
                    style="height: auto; overflow-y: visible; transition: none;"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(0); transition: none;"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="description-1"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <textarea
                            autocomplete="off"
                            class="bp3-input bp3-fill"
                            name="description"
                          >
                            desc1
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <label
              class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
            >
              <input
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              Clone Codebase
            </label>
            <div
              class="cloneCodebaseInfo"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 12 12"
                        width="8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-xsmall"
              >
                Unless disabled, Harness automatically clones your codebase repository before executing the steps of this stage
              </p>
            </div>
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--margin-top-small"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Setup Stage
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditStageView snapshot test should render properly without data 1`] = `
<div>
  <div
    class="stageCreate"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
    >
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 32 28"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M5.327.544h26.057v26.913H5.327V.544zM3.4.544H.617v26.913H3.4V.544zm19.398 10.318c-.943-.872.384-2.307 1.327-1.435l4.17 3.856a.979.979 0 010 1.435l-4.17 3.855c-.943.873-2.27-.562-1.327-1.434L26.193 14l-3.395-3.138zM20.09 7.404c.499-1.186 2.302-.426 1.803.76L16.62 20.597a.978.978 0 01-1.802-.76L20.09 7.404zm-7.505 2.023c.944-.872 2.27.563 1.327 1.435L10.517 14l3.395 3.139c.944.872-.383 2.308-1.327 1.434l-4.17-3.855a.98.98 0 010-1.435l4.17-3.856z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              About Your Stage
            </p>
            <div
              class="InputWithIdentifier--txtNameContainer"
            >
              <div
                class="Layout--horizontal StyledProps--main InputWithIdentifier--txtIdContainer"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ID
                  :
                </p>
                <span
                  class="InputWithIdentifier--idInput"
                  contenteditable="true"
                />
                <span
                  class="bp3-icon bp3-icon-edit StyledProps--main"
                  icon="edit"
                  style="vertical-align: middle;"
                >
                  <svg
                    data-icon="edit"
                    height="12"
                    viewBox="0 0 16 16"
                    width="12"
                  >
                    <desc>
                      edit
                    </desc>
                    <path
                      d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="bp3-form-group"
                data-id="name-0"
              >
                <label
                  class="bp3-label"
                  for="name"
                >
                  Stage Name
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="collapseDiv"
            >
              <div
                class="Collapse--main"
              >
                <div
                  class="StyledProps--font StyledProps--main CollapseHeader--main Collapse--header"
                >
                  <div
                    class="StyledProps--font StyledProps--main CollapseHeader--leftSection"
                  >
                    <span
                      class="bp3-icon bp3-icon-small-plus StyledProps--main StyledProps--color StyledProps--color-grey400"
                      icon="small-plus"
                    >
                      <svg
                        data-icon="small-plus"
                        height="10"
                        viewBox="0 0 16 16"
                        width="10"
                      >
                        <desc>
                          small-plus
                        </desc>
                        <path
                          d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main CollapseHeader--title"
                    >
                      Description
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  />
                </div>
                <div
                  class="Collapse--collapse"
                >
                  <div
                    class="bp3-collapse collapse"
                  >
                    <div
                      aria-hidden="false"
                      class="bp3-collapse-body"
                      style="transform: translateY(-undefinedpx);"
                    />
                  </div>
                </div>
              </div>
            </div>
            <label
              class="bp3-control bp3-switch StyledProps--font Switch--switch StyledProps--main"
            >
              <input
                checked=""
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              Clone Codebase
            </label>
            <div
              class="cloneCodebaseInfo"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                    >
                      <svg
                        height="8"
                        viewBox="0 0 12 12"
                        width="8"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-xsmall"
              >
                Unless disabled, Harness automatically clones your codebase repository before executing the steps of this stage
              </p>
            </div>
            <div
              class="configureCodebase"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-semi-bold StyledProps--margin-bottom-medium"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall"
                  icon="cog"
                >
                  <svg
                    data-icon="cog"
                    height="18"
                    viewBox="0 0 16 16"
                    width="18"
                  >
                    <desc>
                      cog
                    </desc>
                    <path
                      d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                Configure Codebase
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
              >
                Help text to tell the user this is only for the first time.
              </p>
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <label
                  class="bp3-label"
                >
                  Connector
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal StyledProps--font Button--button Button--iconOnly StyledProps--main container"
                        style="width: 400px;"
                        type="button"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                            style="justify-content: space-between; width: 100%;"
                          >
                            <p
                              class="StyledProps--font StyledProps--main"
                            >
                              test1
                            </p>
                            <div
                              class="rightStatus"
                            >
                              <span
                                class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                                icon="full-circle"
                              >
                                <svg
                                  data-icon="full-circle"
                                  height="6"
                                  viewBox="0 0 16 16"
                                  width="6"
                                >
                                  <desc>
                                    full-circle
                                  </desc>
                                  <path
                                    d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                              <span
                                class="Tag--main"
                              >
                                <span
                                  class="bp3-tag bp3-minimal tag"
                                >
                                  <span
                                    class="bp3-text-overflow-ellipsis bp3-fill"
                                  >
                                    account
                                  </span>
                                </span>
                              </span>
                            </div>
                          </div>
                        </span>
                        <span
                          class="bp3-icon bp3-icon-caret-down StyledProps--main"
                          icon="caret-down"
                        >
                          <svg
                            data-icon="caret-down"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              caret-down
                            </desc>
                            <path
                              d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="bp3-form-group repositoryUrl"
                data-id="repoName-2"
                style="flex-grow: 1;"
              >
                <label
                  class="bp3-label"
                  for="repoName"
                >
                  Repository Name
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="repoName"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button StyledProps--font Button--button StyledProps--main StyledProps--intent-primary StyledProps--margin-top-small"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Setup Stage
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
